Moved test config into separate file

--- a/MEILI_Travel_Diary/test/index.html
+++ b/MEILI_Travel_Diary/test/index.html
@@ -22,6 +22,7 @@
     <script src="../public/javascripts/src/meili/Request.js"></script>
     <script src="../public/javascripts/src/meili/Api.js"></script>
 
+    <script src="test_config.js"></script>
     <script src="client_integration_test.js"></script>
 
     <script>
