Updating tests to reflect current app

--- a/MEILI_Travel_Diary/test/index.html
+++ b/MEILI_Travel_Diary/test/index.html
@@ -16,11 +16,17 @@
 
     <script type="text/javascript" src="../public/javascripts/lib/jquery.js"></script>
     <script type="text/javascript" src="../public/javascripts/lib/leaflet_1.0.0/leaflet.js"></script>
+    <script type="text/javascript" src="../public/javascripts/lib/emitter_1.2.1/index.js"></script>
+    <script type="text/javascript" src="../public/javascripts/lib/moment_2.15.1.js"></script>
 
     <script src="../public/javascripts/src/config.js"></script>
     <script src="../public/javascripts/src/meili/Log.js"></script>
     <script src="../public/javascripts/src/meili/Request.js"></script>
     <script src="../public/javascripts/src/meili/Api.js"></script>
+
+    <script src="../public/javascripts/src/meili/model/User.js"></script>
+    <script src="../public/javascripts/src/meili/model/Tripleg.js"></script>
+    <script src="../public/javascripts/src/meili/model/Trip.js"></script>
 
     <script src="test_config.js"></script>
     <script src="client_integration_test.js"></script>
