added missing util reference in test case index

--- a/MEILI_Travel_Diary/test/integration/index.html
+++ b/MEILI_Travel_Diary/test/integration/index.html
@@ -23,6 +23,7 @@
     <script src="../../public/javascripts/src/meili/Log.js"></script>
     <script src="../../public/javascripts/src/meili/Request.js"></script>
     <script src="../../public/javascripts/src/meili/Api.js"></script>
+    <script src="../../public/javascripts/src/meili/Util.js"></script>
 
     <script src="../../public/javascripts/src/meili/model/User.js"></script>
     <script src="../../public/javascripts/src/meili/model/Tripleg.js"></script>
