Adding missed reference to make tests runnable

--- a/MEILI_Travel_Diary/test/integration/index.html
+++ b/MEILI_Travel_Diary/test/integration/index.html
@@ -20,6 +20,7 @@
     <script src="../../public/javascripts/lib/moment_2.15.1.js"></script>
 
     <script src="../../public/javascripts/src/config.js"></script>
+    <script src="../../public/javascripts/src/meili/Util.js"></script>
     <script src="../../public/javascripts/src/meili/Log.js"></script>
     <script src="../../public/javascripts/src/meili/Request.js"></script>
     <script src="../../public/javascripts/src/meili/Api.js"></script>
