Adding pois tests for destination

--- a/MEILI_Travel_Diary/test/integration/index.html
+++ b/MEILI_Travel_Diary/test/integration/index.html
@@ -48,6 +48,7 @@
     <script src="test_config.js"></script>
     <script src="specs/trips.js"></script>
     <script src="specs/triplegs.js"></script>
+    <script src="specs/pois.js"></script>
     <script src="specs/test.js"></script>
 
     <script>
